Añadiendo enlaces a demás secciones

--- a/principal.html
+++ b/principal.html
@@ -10,11 +10,11 @@
 <body>
     <header id="menu-principal">
         <nav id ="enlaces-navegacion">
-            <a href="">PROMOCIONES</a>
+            <a href="principal.html#subscripciones">PROMOCIONES</a>
             <a href="">FOTOS</a>
-            <a href="">SERVICIOS</a>
-            <a href="">MAPA</a>
-            <a href="">CONTACTO</a>
+            <a href="principal.html#servicios">SERVICIOS</a>
+            <a href="principal.html#CONTACTO">MAPA</a>
+            <a href="principal.html#CONTACTO">CONTACTO</a>
         </nav>
         <nav id="opciones-usuario">
             <a href="#">
@@ -96,7 +96,7 @@
             </article>
         </div>
     </section>
-    <footer>
+    <footer id="CONTACTO">
         <div>
             <a href="#">POLÍTICA DE COOKIES</a>
             <a href="#">AVISO LEGAL</a>
