Estilos agregados a citas y servicios

--- a/principal.html
+++ b/principal.html
@@ -31,33 +31,44 @@
         <h2>Regálate un momento de paz y consiente a tu piel en el mejor lugar</h2>
     </section>
     <section id="citas">
-        RESERVA TU CITA
-        <input type="text">
-        CÓDIGO PROMOCIONAL
-        <input type="text">
+        <div>
+            <label>RESERVA TU CITA: </label>
+            <input type="text">
+        </div>
+        <div>
+            <label>CÓDIGO PROMOCIONAL: </label>
+            <input type="text" placeholder="CÓDIGO">
+        </div>
     </section>
     <section id="servicios">
         <article>
             <h3>Masajes de pies</h3>
-            <img src="/images/pies.png" alt="Masajes de pies" width="100" height="100">
+            <img src="images/pies.png" alt="Masajes de pies" width="100" height="100">
             <p>Disfruta de un relajante masaje de pies para aliviar la tensión y revitalizar tus pies cansados.</p>
-            <p>$65</p>
-            <button>Reservar</button>
+            <div class="precio-boton">
+                <p class="precio">$65</p>
+                <button>Reservar</button>
+            </div>
         </article>
         <article>
             <h3>Masaje relajante</h3>
-            <img src="/images/relajante.png" alt="Masaje relajante" width="100" height="100">
+            <img src="images/relajante.png" alt="Masaje relajante" width="100" height="100">
             <p>Renueva y rejuvenece tu piel con nuestros masajes relajantes, diseñados para aliviar el estrés y promover la relajación.</p>
-            <p>$60</p>
-            <button>Reservar</button>
+            <div class="precio-boton">
+                <p class="precio">$60</p>
+                <button>Reservar</button>
+            </div>
         </article>
         <article>
             <h3>Masaje con bambú</h3>
-            <img src="/images/bambu.png" alt="Masaje con bambú" width="100" height="100">
+            <img src="images/bambu.png" alt="Masaje con bambú" width="100" height="100">
             <p>Experimenta la fusión de la aromaterapia y la reflexología con nuestro exclusivo masaje con bambú, que alivia la tensión y revitaliza tu cuerpo.</p>
-            <p>$58</p>
-            <button>Reservar</button>
+            <div class="precio-boton">
+                <p class="precio">$58</p>
+                <button>Reservar</button>
+            </div>
         </article>
+    </section>
     <section id="subscripciones">
         <h2>Hazte socio y prueba nuestros beneficios</h2>
         <div class="planes">
