Cambiando nombre de sección Suscripciones y cambiando extensión del index

--- a/principal.html
+++ b/principal.html
@@ -10,11 +10,11 @@
 <body>
     <header id="menu-principal">
         <nav id ="enlaces-navegacion">
-            <a href="principal.html#subscripciones">PROMOCIONES</a>
+            <a href="principal.html#suscripciones">PROMOCIONES</a>
             <a href="">FOTOS</a>
             <a href="principal.html#servicios">SERVICIOS</a>
-            <a href="principal.html#CONTACTO">MAPA</a>
-            <a href="principal.html#CONTACTO">CONTACTO</a>
+            <a href="principal.html#contactos">MAPA</a>
+            <a href="principal.html#contactos">CONTACTO</a>
         </nav>
         <nav id="opciones-usuario">
             <a href="#">
@@ -69,7 +69,7 @@
             </div>
         </article>
     </section>
-    <section id="subscripciones">
+    <section id="suscripciones">
         <h2>Hazte socio y prueba nuestros beneficios</h2>
         <div class="planes">
             <article>
@@ -107,7 +107,7 @@
             </article>
         </div>
     </section>
-    <footer id="CONTACTO">
+    <footer id="contactos">
         <div>
             <a href="#">POLÍTICA DE COOKIES</a>
             <a href="#">AVISO LEGAL</a>
