--- a/principal.html
+++ b/principal.html
@@ -21,8 +21,8 @@
                 <img src="images/user.png" alt="Mi cuenta" class="icono-usuario"> Mi cuenta
             </a>
             <a href="#">
-                ES <img src="/images/flag.png" alt="Idioma" class="icono-bandera">
-                <img src="/images/arrow.png" alt="Selección de idioma" class="icono-flecha">
+                ES <img src="images/flag.png" alt="Idioma" class="icono-bandera">
+                <img src="images/arrow.png" alt="Selección de idioma" class="icono-flecha">
             </a>
         </nav>
     </header>
@@ -74,7 +74,7 @@
         <div class="planes">
             <article>
                 <div class="circle">
-                    <img src="/images/gold.png" alt="Plan GOLD">
+                    <img src="images/gold.png" alt="Plan GOLD">
                 </div>
                 <h2>GOLD</h2>
                 <button>VER CONDICIONES</button>
@@ -86,7 +86,7 @@
             </article>
             <article>
                 <div class="circle">
-                    <img src="/images/premium.png" alt="Plan PREMIUM">
+                    <img src="images/premium.png" alt="Plan PREMIUM">
                 </div>
                 <h2>PREMIUM</h2>
                 <button>VER CONDICIONES</button>
@@ -97,7 +97,7 @@
             </article>
             <article>
                 <div class="circle">
-                    <img src="/images/plate.png" alt="Plan PLATE">
+                    <img src="images/plate.png" alt="Plan PLATE">
                 </div>
                 <h2>PLATE</h2>
                 <button>VER CONDICIONES</button>
@@ -116,9 +116,9 @@
         </div>
         <div>
             <span>SÍGUENOS EN </span>
-            <a href="#"><img src="/images/rs_facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="/images/rs_twiter.png" alt="Twitter"></a>
-            <a href="#"><img src="/images/rs_youtube.png" alt="YouTube"></a>
+            <a href="#"><img src="images/rs_facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="images/rs_twiter.png" alt="Twitter"></a>
+            <a href="#"><img src="images/rs_youtube.png" alt="YouTube"></a>
         </div>
     </footer>
 </body>
